<resources>
    <string name="app_name">Messeger</string>
    <string name="title_activity_chat_menu">ChatMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_searching">Searching</string>
    <string name="search_title">Search\.\.\.</string>
    <string name="menu_messenger">Messenger</string>
    <string name="menu_account">Account</string>
    <string name="add_chat_button">Add chat</string>
    <string name="creating_chat">Сreating a chat</string>
    <string name="login">Enter login</string>
    <string name="password">Enter password</string>
    <string name="new_password">Enter new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login_string">Login</string>
    <string name="current_password_string">Current Password</string>
    <string name="new_password_string">New Password</string>
    <string name="chat_name">Chat name</string>
    <string name="select_users">Select Users:</string>
    <string name="change_ip_address">Change IP address</string>
    <string name="pfName">com.super.stuff.preffile.name</string>
    <string name="pfCodeForID">com.super.stuff.pf.id</string>
    <string name="pfCodeForPassword">com.super.stuff.pf.passwd</string>
    <string name="pfCodeForMode">com.super.stuff.pf.mode</string>
    <string name="pfNoStringPresent">NO-STRING-PRESENT-HERE</string>
    <string name="change_application_theme">Change Application Theme</string>
</resources>