<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_messenger">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.messeger.uimenu.search.SearchFragment"
        android:label="@string/action_searching"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_messenger"
        android:name="com.example.messeger.uimenu.messenger.MessengerFragment"
        android:label="@string/menu_messenger"
        tools:layout="@layout/fragment_messenger" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.messeger.uimenu.gallery.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.messeger.uimenu.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>