<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uimenu.gallery.AccountFragment">

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:text="Exit"
        app:layout_constraintBottom_toTopOf="@+id/DeleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="208dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/current_password_string"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/NowPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="183dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/new_password_string"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/NewPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="119dp"
        android:layout_height="100dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/NowPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NowPassword" />

    <Button
        android:id="@+id/EditInformationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@+id/ExitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_string"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/UserName"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>